# chemical_index

./: .gitignore  AGENTS.md  README.md  pyproject.toml
chemical_index/: __init__.py  __main__.py  api.py  build_index.py  cli.py  hashing.py  label_retrieval.py  normalize.py  pdf_parser.py  retrieval.py  safety.py  schema.py  scoring.py  search.py  section_extractor.py  sync_index.py  validate.py
data/: products.json
data/tests/: retrieval_goldens.json
tests/: test_api.py  test_cli.py  test_hashing.py  test_index.py  test_label_retrieval.py  test_normalize.py  test_pdf_parser.py  test_retrieval.py  test_safety.py  test_schema.py  test_scoring.py  test_search.py  test_section_extractor.py  test_sync_report.py  test_validate.py
tests/data/: test_cases.json
